updated documentation for black-box